test/expected/declare_o_minus_iel_i.out
declare - as operator (int, ...) returning int
                       ^
24: error: at least 1 parameter of a non-member operator must be an enum, class, struct, or union, or a reference thereto, or a typedef thereof
